[tool.poetry]
name = "api-pipeline-with-agent"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <rm.panegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.0"
telethon = "^1.40.0"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
openai = "^1.82.0"
schedule = "^1.2.2"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
